[package]
name = "action-validator"
version = "0.0.0-git"
authors = ["Matt Palmer <matt@hezmatt.org>"]
edition = "2021"
build = "build.rs"

[dependencies]
glob = "0.3"
clap = { version = "4.5", features = ["derive", "color"] }
serde = "1.0"
serde_json = "1.0"
valico = "4.0"
serde_yml = "0.0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
split-debuginfo = "off"
debug = false
